corpus/baselines/conformance/jsdoc/jsdocPrototypePropertyAccessWithType.errors.txt
/a.js(1,16): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(4,1): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== /a.js (2 errors) ====
    function C() { this.x = false; };
                   ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    /** @type {number} */
    C.prototype.x;
    new C().x;
    ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    